--- a/QuickQuiz/QuickQuiz/QuickQuiz.csproj
+++ b/QuickQuiz/QuickQuiz/QuickQuiz.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="QuizLogic\Commands\Complete\" />
+  </ItemGroup>
+
 </Project>
